--- a/style.css
+++ b/style.css
@@ -10,25 +10,32 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #f2f2f2;
+    background-color: white;
+    padding: 13px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-header ul{
+.nav{
+    border: 1px solid rgb(192, 188, 188);
+    border-radius: 20px;
+}
+ ul{
     list-style: none;
     display: flex;
     justify-content: center;
-    gap: 3rem;
+    gap: 1.3rem;
+    padding: 10px;
 }
 header img{
     width: 20%;
     height: 10vh;
 }
 ul li{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 li a{
     text-decoration: none;
-    color: black;
+    color: rgb(59, 59, 59);
 }
 a img{
     width: 100%;
@@ -356,31 +363,46 @@ footer{
     justify-content: space-around;
     flex-direction: row;
     gap: 2rem;
-    align-items: center;
     width: 100%;
     height: 80vh;
-    background-color: whitesmoke;
 }
-footer .leftFooter{
+ .footerMenu{
+    display: flex;
+    flex-direction: row;
+ }
+ .footerList{
+    display: flex;
+    flex-direction: column;
+ }
+ .footerList h3{
+    font-size: 1rem;
+    color: rgb(241, 73, 7);
+    text-align: start;
+    margin-left: 0.7rem;
+ }
+ .footerList ul{
+    list-style: none;
+    flex-direction: column;
+ }
+ .footerList li{
+    font-size: 1rem;
+    color: #474747;
+    text-align: start;
+ }
+.conn{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    gap: 2rem;
-    font-size: 1.2rem;
-}
-.leftFooter img{
-    width: 30%;
-    height: 20%;
 }
 .socialMedia{
     display: flex;
-    justify-content: space-between;
-    gap: 1rem;
+    gap: 3rem;
+    margin-bottom: 2rem;
 }
 .socialMedia .socialicon{
             margin-top: 2rem;
              display: flex;
-              gap: 0.5rem; 
+              gap: 0; 
               align-items: center; 
               text-align: center;
 }
@@ -388,29 +410,19 @@ footer .leftFooter{
     width: 2rem;
     height: 1.5rem;
 }
-footer .rightFooter{
-    width: 50%;
-    height: 50%;
+.footend{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
-.rightFooter .footerf{
+.footend p{
+    color: #a3a2a2;
+}
+.footrightend{
     display: flex;
-    flex-direction: column;
-    gap: 0;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
+    justify-content: space-between;
+    gap: 2rem;
 }
-table{
-    width: 100%;
-    align-items: center;
-    text-align: start;
-}
-table thead tr th{
-    color: rgb(241, 73, 7);
-    
-}
-table tr th{
-    text-align: start;
+.footrightend a{
+    text-decoration: none;
+    color: #000;
 }
