--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ a img{
     flex-direction: column;
     text-align: center;
     height: 100vh;
-    background-image: url(/images/images\ \(2\).jpeg);
+    background-image: url(../images/images\ \(2\).jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
