--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,7 @@ a img{
      gap: 5rem; 
      margin-top: 5rem;
 }
-.heroSection{
+.serviceSection{
     width: 100%;
     padding: 2rem;
     background-color: whitesmoke;
@@ -226,8 +226,83 @@ form button {
 }
 .team-member img{
     width: 100%;
+    height: 200px;
 }
 
+/* about css */
+.about{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    height: 125vh;
+    background-color: whitesmoke;
+}
+.aboutTop h1{
+   font-size: 3rem;
+}
+.aboutbtn{
+    background-color: rgb(241, 73, 7);
+    padding: 15px;
+    border-radius: 8px;
+    border: none;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    margin: 2rem 20rem;
+}
+.aboutbtn:hover{
+    color: #000;    
+}
+.aboutCard{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.aboutCardItem{
+    background-color: white;
+    border-radius: 10px;
+    width: 30%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    box-shadow: #ff7300 1.95px 1.95px 2.6px;
+    margin-bottom: 0.5rem;
+}
+.aboutCardItem .cardtop{
+    display: flex;
+    justify-content: space-around;
+    gap: 2rem;
+    align-items: start;
+    flex-direction: column;
+    margin: 1.5rem;
+}
+.cardtop p{
+    height: 30vh;
+    font-size: 1.2rem;
+    text-align: start;
+    color: rgb(102, 101, 101);
+}
+.aboutCardItem .cardbottom{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.cardbottom .testBtn{
+    background-color: rgb(241, 73, 7);
+    padding: 13px;
+    border-radius: 5px;
+    border: none;
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+}
+.testBtn:hover{
+    color: #000;
+}
 /* news css */
 
 .news{
@@ -283,79 +358,7 @@ form button {
     cursor: pointer;
 }
 
-/* about css */
-.about{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    height: 125vh;
-    background-color: whitesmoke;
-}
-.aboutTop h1{
-   font-size: 3rem;
-}
-.aboutbtn{
-    background-color: rgb(241, 73, 7);
-    padding: 15px;
-    border-radius: 8px;
-    border: none;
-    font-size: 1rem;
-    font-weight: bold;
-    color: white;
-    cursor: pointer;
-    margin: 2rem 20rem;
-}
-.aboutbtn:hover{
-    color: #000;    
-}
-.aboutCard{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.aboutCardItem{
-    background-color: white;
-    border-radius: 10px;
-    width: 30%;
-    height: 90vh;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    box-shadow: #ff7300 1.95px 1.95px 2.6px;
-}
-.aboutCardItem .cardtop{
-    display: flex;
-    justify-content: space-around;
-    gap: 2rem;
-    align-items: start;
-    flex-direction: column;
-    margin: 1.5rem;
-}
-.cardtop p{
-    height: 30vh;
-    font-size: 1.2rem;
-    text-align: start;
-    color: rgb(102, 101, 101);
-}
-.aboutCardItem .cardbottom{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.cardbottom .testBtn{
-    background-color: rgb(241, 73, 7);
-    padding: 13px;
-    border-radius: 5px;
-    border: none;
-    font-size: 0.8rem;
-    font-weight: bold;
-    color: white;
-    cursor: pointer;
-}
-.testBtn:hover{
-    color: #000;
-}
+/* footercss */
 footer{
     display: flex;
     justify-content: space-around;
@@ -377,7 +380,7 @@ footer{
     flex-direction: column;
  }
  .footerList h3{
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: rgb(241, 73, 7);
     text-align: start;
     margin-left: 0.7rem;
@@ -387,7 +390,7 @@ footer{
     flex-direction: column;
  }
  .footerList li{
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: #474747;
     text-align: start;
  }
