--- a/styles/posts.css
+++ b/styles/posts.css
@@ -12,7 +12,7 @@ header{
 .nav{
     border: 1px solid rgb(192, 188, 188);
     border-radius: 20px;
-    height: 8vh;
+    height: 40px;
 }
 ul{
     list-style: none;
@@ -76,4 +76,48 @@ a img{
     border-radius: 5px;
     width: 40%;
     margin: auto 4rem;
+}
+@media (max-width: 1200px) {
+    header img {
+        width: 25%;
+    }
+
+    #card {
+        width: 30%;
+    }
+}
+
+@media (max-width: 768px) {
+   
+    ul {
+        display: none;
+    }
+
+    header img {
+        width: 50%;
+        height: auto;
+    }
+
+    #card {
+        width: 45%;
+    }
+}
+
+@media (max-width: 480px) {
+    ul {
+        gap: 1rem;
+    }
+
+    header img {
+        width: 70%;
+    }
+
+    #card {
+        width: 90%;
+    }
+
+    #card button {
+        width: 80%;
+        margin: auto;
+    }
 }
