--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-header{
+  }
+  header{
     position: -webkit-sticky;
     position: sticky;
     top: 0;
@@ -13,35 +13,35 @@ header{
     background-color: white;
     padding: 13px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-.nav{
+  }
+  .nav{
     border: 1px solid rgb(192, 188, 188);
     border-radius: 20px;
-}
- ul{
+  }
+  ul{
     list-style: none;
     display: flex;
     justify-content: center;
     gap: 1.3rem;
     padding: 10px;
-}
-header img{
+  }
+  header img{
     width: 20%;
     height: 10vh;
-}
-ul li{
+  }
+  ul li{
     font-size: 18px;
     font-weight: bold;
-}
-li a{
+  }
+  li a{
     text-decoration: none;
     color: rgb(59, 59, 59);
-}
-a img{
+  }
+  a img{
     width: 100%;
-}
-/* home page css */
-.home{
+  }
+  /* home page css */
+  .home{
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -51,42 +51,42 @@ a img{
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-}
-.homecontent{
+  }
+  .homecontent{
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     gap: 3.5rem;
-}
-.homecontent h3{
+  }
+  .homecontent h3{
     font-size: 2rem;
-}
-.homecontent h1{
+  }
+  .homecontent h1{
     text-align: center;
     color: rgb(241, 73, 7);
     font-size: 3rem;
     width: 70%;
     margin: auto;
-}
-.homecontent p{
+  }
+  .homecontent p{
     font-size: 1.5rem;
     text-align: center;
     width: 80%;
     margin: auto;
     line-height: 2.5rem;
     color: white;
-}
-.homecontent span{
+  }
+  .homecontent span{
     color: rgb(241, 73, 7);
     background-color: rgb(224, 175, 156);
     text-decoration: underline;
-}
-.homebtn {
+  }
+  .homebtn {
     display: flex;
     justify-content: center;
     gap: 2rem;
-}
-.homebtn button{
+  }
+  .homebtn button{
     padding: 15px;
     border-radius: 10px;
     border: 1px solid rgb(241, 73, 7);
@@ -94,127 +94,158 @@ a img{
     font-weight: bold;
     color: white;
     cursor: pointer;
-}
- .fbtn{
+  }
+  .fbtn{
     background-color: rgb(241, 73, 7);
-}
- .sbtn{
+  }
+  .sbtn{
     background-color: rgb(22, 22, 21);
-}
-.fbtn:hover{
+  }
+  .fbtn:hover{
     color: #000;
-}
-.sbtn:hover{
+  }
+  .sbtn:hover{
     color: rgb(241, 73, 7);
-}
-/* hero section */
-.hero{
+  }
+  
+  /* tool section */
+  .tools{
+    width: 100%;
+    height: 100vh;
+  }
+  .toolsTitle{
+   display: flex;
+   justify-content: space-between;
+   flex-direction: column;
+   gap: 2rem;
+   margin-top: 7rem;
+   align-items: center;
+  }
+  .toolsTitle h1{
+    font-size: 3.5rem;
+    font-family: sans-serif;
+    color: rgb(241, 88, 33);
+  }
+  .toolsTitle p{
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: #5a5959;
+  }
+  .toolsContainer{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    gap: 7rem;
+  }
+  
+  /* hero section */
+  .hero{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin: 5rem;
-}
-.hero-text{
+  }
+  .hero-text{
     text-align: center;
-}
-.hero-text h1{
+  }
+  .hero-text h1{
     font-size: 2rem;
-}
-.hero-text p{
+  }
+  .hero-text p{
     font-size: 1.2rem;
     text-align: center;
     width: 60%;
     margin: 10px auto;
-}
-.service{
+  }
+  .service{
     display: inline-flex;
      gap: 5rem; 
      margin-top: 5rem;
-}
-.serviceSection{
+  }
+  .serviceSection{
     width: 100%;
     padding: 2rem;
     background-color: whitesmoke;
     border-radius: 20px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-}
-
-/* form css*/
-.formSection{
+  }
+  
+  /* form css*/
+  .formSection{
     padding-top: 50px; 
     display: flex;
     justify-content: space-around; 
     margin: 5rem 0;
-}
-.form-container {
+  }
+  .form-container {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 35%;
-}
-
-form {
+  }
+  
+  form {
     display: flex;
     flex-direction: column;
-}
-
-h2 {
+  }
+  
+  h2 {
     text-align: center;
     margin-bottom: 20px;
     font-size: 2rem;
     color: #704c4c;
-}
-
-label {
+  }
+  
+  label {
     margin: 10px 0;
-}
-
-input, textarea,select {
+  }
+  
+  input, textarea,select {
     margin-bottom: 15px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     width: 100%;
     box-sizing: border-box;
-}
-.error{
+  }
+  .error{
     color: red;
     margin-top: -1rem;
     margin-bottom: 1rem;
-}
-form button {
+  }
+  form button {
     background-color: #4CAF50;
     color: white;
     padding: 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
-.formImage{
+  }
+  .formImage{
     display: flex;
     justify-content: center;
     flex-direction: column;
     gap: 4rem;
-}
-.formImage img{
+  }
+  .formImage img{
     width: 100%;
     border-radius: 60px 60px 0 0;
-}
-
-/* Team css */
-.teams{
+  }
+  
+  /* Team css */
+  .teams{
     width: 100%;
     height: 100%;
     margin-bottom: 5rem;
-}
-.teamContainer{
+  }
+  .teamContainer{
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-.team-member{
+  }
+  .team-member{
     background-color: whitesmoke;
     border-radius: 10px;
     width: 20%;
@@ -223,25 +254,25 @@ form button {
     display: flex;
     flex-direction: column;
     gap: 20px;
-}
-.team-member img{
+  }
+  .team-member img{
     width: 100%;
     height: 200px;
-}
-
-/* about css */
-.about{
+  }
+  
+  /* about css */
+  .about{
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
     height: 125vh;
     background-color: whitesmoke;
-}
-.aboutTop h1{
+  }
+  .aboutTop h1{
    font-size: 3rem;
-}
-.aboutbtn{
+  }
+  .aboutbtn{
     background-color: rgb(241, 73, 7);
     padding: 15px;
     border-radius: 8px;
@@ -251,16 +282,16 @@ form button {
     color: white;
     cursor: pointer;
     margin: 2rem 20rem;
-}
-.aboutbtn:hover{
+  }
+  .aboutbtn:hover{
     color: #000;    
-}
-.aboutCard{
+  }
+  .aboutCard{
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-.aboutCardItem{
+  }
+  .aboutCardItem{
     background-color: white;
     border-radius: 10px;
     width: 30%;
@@ -270,27 +301,27 @@ form button {
     flex-direction: column;
     box-shadow: #ff7300 1.95px 1.95px 2.6px;
     margin-bottom: 0.5rem;
-}
-.aboutCardItem .cardtop{
+  }
+  .aboutCardItem .cardtop{
     display: flex;
     justify-content: space-around;
     gap: 2rem;
     align-items: start;
     flex-direction: column;
     margin: 1.5rem;
-}
-.cardtop p{
+  }
+  .cardtop p{
     height: 30vh;
     font-size: 1.2rem;
     text-align: start;
     color: rgb(102, 101, 101);
-}
-.aboutCardItem .cardbottom{
+  }
+  .aboutCardItem .cardbottom{
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
-.cardbottom .testBtn{
+  }
+  .cardbottom .testBtn{
     background-color: rgb(241, 73, 7);
     padding: 13px;
     border-radius: 5px;
@@ -299,54 +330,54 @@ form button {
     font-weight: bold;
     color: white;
     cursor: pointer;
-}
-.testBtn:hover{
+  }
+  .testBtn:hover{
     color: #000;
-}
-/* news css */
-
-.news{
+  }
+  /* news css */
+  
+  .news{
     height: 50vh;
     background-color: #09031f;
     margin-bottom: 5rem;
-}
-.news .newsCont{
+  }
+  .news .newsCont{
     display: flex;
     justify-content: space-between;
     margin: 8rem 3rem;
     padding: 6rem 0;
-}
-.news .newsleft{
+  }
+  .news .newsleft{
     align-items: start;
     display: flex;
     justify-content: center;
     flex-direction: column;
-}
-.newsleft h1{
+  }
+  .newsleft h1{
     font-size: 2.1rem;
     color: #f2f2f2;
-}
-.newsleft h2{
+  }
+  .newsleft h2{
     font-size: 1.5rem;
     color: #a3a2a2;
-}
-.newsleft p{
+  }
+  .newsleft p{
     font-size: 1rem;
     font-weight: bold;
     color: #6b6969;
-}
-.news .newsRight{
+  }
+  .news .newsRight{
     display: flex;
     justify-content: space-between;
     width: 40%;
     gap: 1.5rem;
-}
-.newsRight input{
+  }
+  .newsRight input{
     background-color: #fff;
     height: 8vh;
     width: 100%;
-}
-.newsRight button{
+  }
+  .newsRight button{
     background-color: rgb(241, 73, 7);
     border-radius: 5px;
     border: none;
@@ -356,85 +387,87 @@ form button {
     font-weight: bold;
     color: white;
     cursor: pointer;
-}
-
-/* footercss */
-footer{
+  }
+  
+  /* footercss */
+  footer{
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     width: 100%;
     height: 80vh;
-}
-.footerf{
+  }
+  .footerf{
     margin: 4rem;
-}
- .footerMenu{
+  }
+  .footerMenu{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 2rem;
- }
- .footerList{
+  }
+  .footerList{
     display: flex;
     flex-direction: column;
- }
- .footerList h3{
+  }
+  .footerList h3{
     font-size: 0.8rem;
     color: rgb(241, 73, 7);
     text-align: start;
     margin-left: 0.7rem;
- }
- .footerList ul{
+  }
+  .footerList ul{
     list-style: none;
     flex-direction: column;
- }
- .footerList li{
+  }
+  .footerList li{
     font-size: 0.8rem;
     color: #474747;
     text-align: start;
- }
- .footerList li:hover{
+  }
+  .footerList li:hover{
     color: rgb(241, 73, 7);
- }
- .footcol{
+  }
+  .footcol{
     margin-right: 3rem;
- }
-.conn{
+  }
+  .conn{
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     margin: 1rem;
-}
-.socialMedia{
+  }
+  .socialMedia{
     display: flex;
     gap: 3rem;
     margin-bottom: 2rem;
-}
-.socialMedia .socialicon{
+  }
+  .socialMedia .socialicon{
             margin-top: 2rem;
              display: flex;
               gap: 0; 
               align-items: center; 
               text-align: center;
-}
-.socialicon img{
+  }
+  .socialicon img{
     width: 2rem;
     height: 1.5rem;
-}
-.footend{
+  }
+  .footend{
     display: flex;
     justify-content: space-between;
-}
-.footend p{
+  }
+  .footend p{
     color: #a3a2a2;
-}
-.footrightend{
+  }
+  .footrightend{
     display: flex;
     justify-content: space-between;
     gap: 2rem;
-}
-.footrightend a{
+  }
+  .footrightend a{
     text-decoration: none;
     color: #000;
-}
+  }
+
+  
