--- a/styles/postDetails.css
+++ b/styles/postDetails.css
@@ -10,9 +10,8 @@ header{
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .nav{
-  border: 1px solid rgb(192, 188, 188);
   border-radius: 20px;
-  height: 8vh;
+  height: 50px;
 }
 ul{
   list-style: none;
@@ -23,7 +22,7 @@ ul{
 }
 header img{
   width: 20%;
-  height: 10vh;
+  height: 50px;
 }
 ul li{
   font-size: 18px;
